<resources>
    <string name="app_name">My Application</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="search_notes">Search Notes</string>
    <string name="add_url">Add url</string>
    <string name="delete_note">Delete Note</string>

    <string name="do_you_really_want_to_delete_the_note">Do you really want to delete the note</string>
    <string name="cancel">Cancel</string>
    <string name="developers">Developers</string>
    <string name="settings">Settings</string>
    <string name="home">Home</string>
    <string name="other">Other</string>
    <string name="about">about</string>
    <string name="privacy_policy">privacy policy</string>
    <string name="hari_bio">Hari Krishnan is 20 years old boy who is currently pursuing is bachelors degree at University of madras. He developed the poraali application.</string>
    <string name="karthikanna_bio">Experienced Senior Graphic Designer in 10+ years, Skilled in Graphic Design, logo Design, Brochure Design, Web Applications, Mobile Applications, Email Template, UI Design Templates</string>
</resources>